# NRFconnect_out-of-tree_example

./: LICENSE  README.md
boards/arm/test_bt_nrf52832/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  TEST_BT_nrf52832.dts  TEST_BT_nrf52832.yaml  TEST_BT_nrf52832_defconfig  board.cmake
src/: CMakeLists.txt  main.c
src/modules/: CMakeLists.txt  modules.cmake
src/modules/vl53lx/: CMakeLists.txt  Kconfig  module.yml  st,vl53lx.yaml  vl53lx.c  vl53lx_platform.c  vl53lx_platform.h  vl53lx_platform_init.h  vl53lx_platform_log.c  vl53lx_platform_log.h  vl53lx_platform_user_data.h  vl53lx_platform_user_defines.h  vl53lx_types.h
src/sub/: CMakeLists.txt  multiply.c  multiply.h
